screenshot keybinds and windowrules changes

--- a/hypr/.config/hypr/source/windowrules.conf
+++ b/hypr/.config/hypr/source/windowrules.conf
@@ -6,5 +6,5 @@
 
 windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
 #windowrule = float,^(discord)$
-windowrule = workspace 8,^(discord)$
+windowrule = workspace 8,^(com\.discordapp\.Discord)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
