--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ background {
     blur_size = 7
     noise = 0.0117
     contrast = 0.8916
-    brightness = 0.7172
+    brightness = 0.4
     vibrancy = 0.1696
     vibrancy_darkness = 1.0
 }
@@ -23,9 +23,9 @@ input-field {
     outer_color = rgb(151515)
     inner_color = rgb(a7a7a7)
 
-    position = 0, 0
+    position = 0, 200
     halign = center
-    valign = center
+    valign = bottom
 }
 
 label {
@@ -35,7 +35,7 @@ label {
   font_size = 80
   font_family = JetBrainsMono NF
 
-  position = 40, 40
-  halign = left
-  valign = bottom
+  position = 0, 0
+  halign = center
+  valign = center
 }
