--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -14,7 +14,7 @@ bind = $mainMod ALT, F, exec, pcmanfm
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run --socket=wayland com.discordapp.Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
-bind = $mainMod ALT, T, exec, flatpak run --nosocket=x11 io.freetubeapp.FreeTube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
+bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
