small hyprland settings change

--- a/hypr/.config/hypr/source/settings.conf
+++ b/hypr/.config/hypr/source/settings.conf
@@ -9,8 +9,10 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = yes
+        natural_scroll = true
+        drag_lock = true
         scroll_factor = 0.7
+        disable_while_typing = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
