various hyprland etc changes

--- a/hypr/.config/hypr/source/windowrules.conf
+++ b/hypr/.config/hypr/source/windowrules.conf
@@ -8,3 +8,4 @@ windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Bra
 #windowrule = float,^(discord)$
 windowrule = workspace 8,^(com\.discordapp\.Discord)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
+windowrule = opacity 0.9,^(kitty)$
