--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -4,7 +4,7 @@ $mainMod = SUPER
 #bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
-bind = $mainMod, SPACE, exec, fuzzel --filter-desktop
+bind = CONTROL, SPACE, exec, fuzzel --filter-desktop
 bind = $mainMod, R, exec, fuzzel
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
