--- a/hypr/.config/hypr/source/settings.conf
+++ b/hypr/.config/hypr/source/settings.conf
@@ -10,7 +10,7 @@ input {
 
     touchpad {
         natural_scroll = true
-        drag_lock = true
+        # drag_lock = true
         scroll_factor = 0.7
         disable_while_typing = true
     }
