--- a/unused/alacritty/.config/alacritty/alacritty.toml
+++ b/unused/alacritty/.config/alacritty/alacritty.toml
@@ -26,53 +26,47 @@ style = "Italic"
 family = "JetBrainsMono NF"
 style = "Regular"
 
-[schemes.tokyo-night.bright]
-black = "0x444b6a"
-blue = "0x7da6ff"
-cyan = "0x0db9d7"
-green = "0xb9f27c"
-magenta = "0xbb9af7"
-red = "0xff7a93"
-white = "0xacb0d0"
-yellow = "0xff9e64"
+# TokyoNight Alacritty Colors
+# Default colors
+[colors.primary]
+background = '#1a1b26'
+foreground = '#c0caf5'
 
-[schemes.tokyo-night.normal]
-black = "0x32344a"
-blue = "0x7aa2f7"
-cyan = "0x449dab"
-green = "0x9ece6a"
-magenta = "0xad8ee6"
-red = "0xf7768e"
-white = "0x787c99"
-yellow = "0xe0af68"
+#[colors.cursor]
+#cursor = '#c0caf5'
+#text = '#1a1b26'
 
-[schemes.tokyo-night.primary]
-background = "0x1a1b26"
-foreground = "0xa9b1d6"
+# Normal colors
+[colors.normal]
+black = '#15161e'
+red = '#f7768e'
+green = '#9ece6a'
+yellow = '#e0af68'
+blue = '#7aa2f7'
+magenta = '#bb9af7'
+cyan = '#7dcfff'
+white = '#a9b1d6'
 
-[schemes.tokyo-night-storm.bright]
-black = "0x444b6a"
-blue = "0x7da6ff"
-cyan = "0x0db9d7"
-green = "0xb9f27c"
-magenta = "0xbb9af7"
-red = "0xff7a93"
-white = "0xacb0d0"
-yellow = "0xff9e64"
+# Bright colors
+[colors.bright]
+black = '#414868'
+red = '#f7768e'
+green = '#9ece6a'
+yellow = '#e0af68'
+blue = '#7aa2f7'
+magenta = '#bb9af7'
+cyan = '#7dcfff'
+white = '#c0caf5'
 
-[schemes.tokyo-night-storm.normal]
-black = "0x32344a"
-blue = "0x7aa2f7"
-cyan = "0x449dab"
-green = "0x9ece6a"
-magenta = "0xad8ee6"
-red = "0xf7768e"
-white = "0x9699a8"
-yellow = "0xe0af68"
+# Indexed Colors
+[[colors.indexed_colors]]
+index = 16
+color = '#ff9e64'
 
-[schemes.tokyo-night-storm.primary]
-background = "0x24283b"
-foreground = "0xa9b1d6"
+[[colors.indexed_colors]]
+index = 17
+color = '#db4b4b'
+
 
 [window.padding]
 x = 2
