--- a/hypr/.config/hypr/source/settings.conf
+++ b/hypr/.config/hypr/source/settings.conf
@@ -83,6 +83,7 @@ dwindle {
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
+    no_gaps_when_only = 1
 }
 
 gestures {
@@ -92,6 +93,6 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
+# device:epic mouse V1 {
+#     sensitivity = -0.5
+# }
