removing zoxide. some hyprland changes.

--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -9,6 +9,8 @@ bind = $mainMod, R, exec, fuzzel
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
+bind = $mainMod, GRAVE, togglespecialworkspace, magic
+
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, pcmanfm
 bind = $mainMod ALT, B, exec, brave
