--- a/hypr/.config/hypr/source/windowrules.conf
+++ b/hypr/.config/hypr/source/windowrules.conf
@@ -4,8 +4,8 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
-#windowrule = float,^(discord)$
-windowrule = workspace 8,^(com\.discordapp\.Discord)$
+windowrulev2 = workspace 9 silent,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
+windowrule = workspace 8 silent,^(com\.discordapp\.Discord)$
+windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
 windowrule = opacity 0.9,^(kitty)$
