moved zoxide init

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -11,6 +11,6 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 env = MOZ_ENABLE_WAYLAND,1
-env = EDITOR,helix
+env = EDITOR,nvim
 
 source = ~/.config/hypr/source/*
