hyprland and yazi config change

--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -12,7 +12,7 @@ bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, GRAVE, togglespecialworkspace, magic
 
 bind = $mainMod, Return, exec, kitty
-bind = $mainMod ALT, F, exec, pcmanfm
+bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run --socket=wayland com.discordapp.Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
@@ -91,7 +91,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = SUPER, tab, workspace, e+1
-bind = ALT, tab, workspace, e+1
+bind = ALT, tab, workspace, +1
 
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
