--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -7,7 +7,8 @@
 keymap = [
 
   # Set Wallpaper 
-	{ on = [ "b", "g" ], exec = "shell 'setbg $1'",    desc = "Set wallpaper" },
+  #{ on = [ "b", "g" ], exec = "shell 'gsettings set org.gnome.desktop.background picture-uri-dark file://$1'", desc = "Set wallpaper" },
+  { on = [ "b", "g" ], exec = "shell 'setbg $1'",    desc = "Set wallpaper" },
   { on = [ "b", "l" ], exec = "shell 'setlock $1'",  desc = "Set Lockscreen background"},
 
 	{ on = [ "<Esc>" ], exec = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
