hyprlock, imv, lf, yazi config changes

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -22,6 +22,7 @@ input-field {
     outline_thickness = 2
     outer_color = rgb(151515)
     inner_color = rgb(a7a7a7)
+    rounding = 6
 
     position = 0, 200
     halign = center
