removed windowrule for translucent terminal

--- a/hypr/.config/hypr/source/windowrules.conf
+++ b/hypr/.config/hypr/source/windowrules.conf
@@ -8,4 +8,4 @@ windowrulev2 = workspace 9 silent,class:^(brave-browser)$,title:^(New Private Ta
 windowrule = workspace 8 silent,^(com\.discordapp\.Discord)$
 windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
-windowrule = opacity 0.9,^(kitty)$
+#windowrule = opacity 0.9,^(kitty)$
