moved some hyprland environment variables from start script to hyprland.conf

--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -21,7 +21,7 @@ bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
-#bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
 
 bind = CONTROL ALT, DELETE, exec, hyprlock 
 bind = $mainMod ALT, BACKSPACE, exec, powermenu
