--- a/hypr/.config/hypr/source/windowrules.conf
+++ b/hypr/.config/hypr/source/windowrules.conf
@@ -8,4 +8,5 @@ windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Bra
 windowrule = workspace 8 silent,^(com\.discordapp\.Discord)$
 windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
+windowrulev2 = float,class:(floating)
 #windowrule = opacity 0.9,^(kitty)$
