--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -9,6 +9,9 @@ env = CLUTTER_BACKEND,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+env = XCURSOR_SIZE,24
+env = QT_QPA_PLATFORM,wayland
+env = XCURSOR_THEME,Qogir-white 
 
 env = MOZ_ENABLE_WAYLAND,1
 env = EDITOR,nvim
