--- a/hypr/.config/hypr/source/exec.conf
+++ b/hypr/.config/hypr/source/exec.conf
@@ -6,5 +6,4 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = nm-applet
 exec-once = blueman-applet
-#exec-once = wl-paste --type text --watch cliphist store
-#exec-once = wl-paste --type image --watch cliphist store
+exec-once = clipse -listen
