--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -18,7 +18,8 @@ bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run --socket=wayland com.discordapp.Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
-bind = $mainMod ALT, W, exec, ~/.local/bin/rway
+bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
+bind = $mainMod ALT, W, exec, pkill -SIGUSR2 waybar
 bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
 bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
