various config changes

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -16,6 +16,19 @@ background {
     vibrancy_darkness = 1.0
 }
 
+image {
+    monitor =
+    path = ~/Pictures/profilepics/tk_hirsute300.png
+    size = 150 # lesser side if not 1:1 ratio
+    rounding = -1 # negative values mean circle
+    border_size = 2
+    border_color = rgb(221, 221, 221)
+
+    position = 0, 200
+    halign = center
+    valign = top
+}
+
 input-field {
     monitor = 
     size = 300, 50
