--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -9,8 +9,8 @@ env = CLUTTER_BACKEND,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
-env = HYPRCURSOR_THEME,qogir_hl
-env = HYPRCURSOR_SIZE,24
+#env = HYPRCURSOR_THEME,qogir_hl
+#env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Qogir-white 
 env = QT_QPA_PLATFORM,wayland
