--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -91,7 +91,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = SUPER, tab, workspace, +1
+bind = SUPER, tab, movetoworkspace, +1
 bind = ALT, tab, workspace, e+1
 
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
