--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -18,4 +18,4 @@ env = QT_QPA_PLATFORM,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = EDITOR,nvim
 
-source = ~/.config/hypr/source/*
+source = ~/.config/hypr/hyprland/*
