--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -19,7 +19,7 @@ bind = $mainMod ALT, D, exec, flatpak run --socket=wayland com.discordapp.Discor
 bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
-bind = $mainMod ALT, W, exec, pkill -SIGUSR2 waybar
+bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
 bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
 bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
