--- a/imv/.config/imv/config
+++ b/imv/.config/imv/config
@@ -18,7 +18,7 @@ y = exec echo working!
 
 #bl = exec setlock "$imv_current_file"
 bg = exec setbg "$imv_current_file"
-#bg = exec gsettings set org.gnome.desktop.background picture-uri-dark file://"$imv_current_file"
+bp = exec gsettings set org.gnome.desktop.background picture-uri-dark file://"$imv_current_file"
 
 # Image navigation
 <Left> = prev
