--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -15,7 +15,7 @@ bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
-bind = $mainMod ALT, D, exec, flatpak run --socket=wayland com.discordapp.Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = $mainMod ALT, D, exec, flatpak run io.github.spacingbat3.webcord
 bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
