--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -13,7 +13,7 @@ bind = $mainMod, GRAVE, togglespecialworkspace, magic
 
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, nautilus
-bind = $mainMod ALT, B, exec, brave --ozone-platform=wayland
+bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run io.github.spacingbat3.webcord
 bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
