--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -13,6 +13,7 @@ input {
         # drag_lock = true
         scroll_factor = 0.7
         disable_while_typing = true
+        middle_button_emulation = false
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
