--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -19,27 +19,27 @@ background {
 image {
     monitor =
     path = ~/Pictures/profilepics/tk_hirsute300.png
-    size = 150 # lesser side if not 1:1 ratio
+    size = 280 # lesser side if not 1:1 ratio
     rounding = -1 # negative values mean circle
     border_size = 2
     border_color = rgb(221, 221, 221)
 
-    position = 0, 200
+    position = 0, 300
     halign = center
-    valign = top
+    valign = center
 }
 
 input-field {
     monitor = 
-    size = 300, 50
+    size = 600, 80
     outline_thickness = 2
     outer_color = rgb(151515)
     inner_color = rgb(a7a7a7)
-    rounding = 6
+    rounding = -1
 
-    position = 0, 200
+    position = 0, -200
     halign = center
-    valign = bottom
+    valign = center
 }
 
 label {
