--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -9,5 +9,5 @@ windowrule = workspace 7,^(com\.discordapp\.Discord)$
 windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
 windowrulev2 = float,class:(floating)
-windowrule = float,^(imv)$
+# windowrule = float,^(imv)$
 #windowrule = opacity 0.9,^(kitty)$
