change border color of image in hyprlock

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -22,7 +22,7 @@ image {
     size = 280 # lesser side if not 1:1 ratio
     rounding = -1 # negative values mean circle
     border_size = 2
-    border_color = rgb(221, 221, 221)
+    border_color = rgb(0a0a0a)
 
     position = 0, 300
     halign = center
