--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -5,7 +5,8 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
-windowrule = workspace 7,^(com\.discordapp\.Discord)$
+windowrule = workspace 7,^(discord)$
+windowrule = workspace 6,^(FreeTube)$
 windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
 windowrulev2 = float,class:(floating)
