hyprland config changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,highres@59.9,auto,auto
-monitor = ,preferred,auto,1
+monitor = ,highres@49,auto,auto
 
 env = GDK_BACKEND,wayland
 env = SDL_VIDEODRIVER,wayland
