--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -38,6 +38,9 @@ bind = , print, exec, grim ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S').png |
 # OBS
 bind = CONTROL SHIFT, R, pass, ^(com\.obsproject\.Studio)$
 
+# 1password
+bind = CONTROL SHIFT, SPACE, pass, 1password
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
