--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -47,53 +47,34 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 6
-#    blur = false
-#    blur_size = 3
-#    blur_passes = 1
-#    blur_new_optimizations = true
-    blurls = lockscreen
+    rounding = 10
 
-    drop_shadow = false
-    shadow_range = 6
-    shadow_render_power = 3
+    blur {
+        enabled = true
+        size = 9
+        passes = 3
+        ignore_opacity = true
+      }
+
+    drop_shadow = true
+    inactive_opacity = 0.8
+    shadow_range = 5
+    shadow_render_power = 2
     col.shadow = $shadow
 }
 
 animations {
     enabled = true
-    # Animation curves
-    
-    bezier = linear, 0, 0, 1, 1
-    bezier = md3_standard, 0.2, 0, 0, 1
-    bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
-    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = menu_decel, 0.1, 1, 0, 1
-    bezier = menu_accel, 0.38, 0.04, 1, 0.07
-    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
-    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
-    # Animation configs
-    animation = windows, 1, 3, md3_decel, popin 60%
-    animation = windowsIn, 1, 3, md3_decel, popin 60%
-    animation = windowsOut, 1, 3, md3_accel, popin 60%
+
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    animation = windows, 1, 7, myBezier
+    animation = windowsIn, 1, 7, myBezier, slide
+    animation = windowsOut, 1, 7, default, slide
     animation = border, 1, 10, default
-    animation = fade, 1, 3, md3_decel
-    # animation = layers, 1, 2, md3_decel, slide
-    animation = layersIn, 1, 3, menu_decel, slide
-    animation = layersOut, 1, 1.6, menu_accel
-    animation = fadeLayersIn, 1, 3, menu_decel
-    animation = fadeLayersOut, 1, 1.6, menu_accel
-    animation = workspaces, 1, 7, menu_decel, slide
-    # animation = workspaces, 1, 2.5, softAcDecel, slide
-    # animation = workspaces, 1, 7, menu_decel, slidefade 15%
-    # animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
-    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default, slidefade 20%
 }
 
 dwindle {
