--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -57,7 +57,7 @@ decoration {
       }
 
     drop_shadow = true
-    inactive_opacity = 0.8
+    # inactive_opacity = 0.8
     shadow_range = 5
     shadow_render_power = 2
     col.shadow = $shadow
