added window rules for 1password

--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -10,5 +10,8 @@ windowrule = workspace 6,^(FreeTube)$
 windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
 windowrulev2 = float,class:(floating)
-# windowrule = float,^(imv)$
+windowrulev2 = float,title:(imv)
 #windowrule = opacity 0.9,^(kitty)$
+windowrulev2 = float, title:(1Password)
+windowrulev2 = size 70% 70%, title:(1Password)
+windowrulev2 = center, title:(1Password)
