change screenshot keybinds

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -31,9 +31,9 @@ bind = $mainMod ALT, BACKSPACE, exec, powermenu
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
 bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
 
-bind = SHIFT, print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
+bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
 bind = SUPER, print, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/$(date '+%Y%m%d-%H%M%S')-satty.png | wl-copy -t image/png
-bind = , print, exec, grim ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S').png | wl-copy -t image/png
+bind = SHIFT, print, exec, grim ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S').png | wl-copy -t image/png
 
 # OBS
 bind = CONTROL SHIFT, R, pass, ^(com\.obsproject\.Studio)$
