--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -15,3 +15,4 @@ windowrulev2 = float,title:(imv)
 windowrulev2 = float, title:(1Password)
 windowrulev2 = size 70% 70%, title:(1Password)
 windowrulev2 = center, title:(1Password)
+windowrulev2 = float, title:(calibre)
