commented keybind I really don't need

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -25,7 +25,7 @@ bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 #bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
 
 bind = CONTROL ALT, DELETE, exec, hyprlock
-bind = SUPER, DELETE, exec, hyprlock & systemctl suspend
+# bind = SUPER, DELETE, exec, hyprlock & systemctl suspend
 bind = $mainMod ALT, BACKSPACE, exec, powermenu
 
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
