hyprland window rules changes

--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -5,8 +5,8 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
-windowrule = workspace 7,^(discord)$
-windowrule = workspace 6,^(FreeTube)$
+windowrule = workspace 7 silent,^(discord)$
+windowrule = workspace 6 silent,^(FreeTube)$
 windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
 windowrulev2 = float,class:(floating)
@@ -16,3 +16,5 @@ windowrulev2 = float, title:(1Password)
 windowrulev2 = size 70% 70%, title:(1Password)
 windowrulev2 = center, title:(1Password)
 windowrulev2 = float, title:(calibre)
+windowrulev2 = size 70% 70%, title:(calibre)
+windowrulev2 = center, title:(calibre)
