--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -6,7 +6,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 2
 
     touchpad {
         natural_scroll = true
@@ -24,8 +24,8 @@ misc {
   disable_splash_rendering = true
   mouse_move_enables_dpms = true
   key_press_enables_dpms = true
-  animate_manual_resizes = false
-  animate_mouse_windowdragging = false
+  animate_manual_resizes = true
+  animate_mouse_windowdragging = true
   layers_hog_keyboard_focus = false
   vfr = true
   vrr = 0
