--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -7,7 +7,7 @@
 keymap = [
 
   # Set Wallpaper 
-  { on = [ "b", "p" ], run = "shell 'gsettings set org.gnome.desktop.background picture-uri-dark file://$1'", desc = "Set wallpaper" },
+  { on = [ "b", "p" ], run = "shell 'gsettings set org.gnome.desktop.background picture-uri-dark \"file://$1\"'", desc = "Set wallpaper" },
   { on = [ "b", "g" ], run = "shell 'setbg $1'",    desc = "Set wallpaper" },
   #{ on = [ "b", "l" ], run = "shell 'setlock $1'",  desc = "Set Lockscreen background"},
 
@@ -84,8 +84,8 @@ keymap = [
 	{ on = [ "s" ],         run = "search fd",                                            desc = "Search files by name using fd" },
 	{ on = [ "S" ],         run = "search rg",                                            desc = "Search files by content using ripgrep" },
 	{ on = [ "<C-s>" ],     run = "search none",                                          desc = "Cancel the ongoing search" },
-	{ on = [ "z" ],         run = "jump zoxide",                                          desc = "Jump to a directory using zoxide" },
-	{ on = [ "Z" ],         run = "jump fzf",                                             desc = "Jump to a directory, or reveal a file using fzf" },
+	{ on = [ "z" ],         run = "plugin zoxide",                                          desc = "Jump to a directory using zoxide" },
+	{ on = [ "Z" ],         run = "plugin fzf",                                             desc = "Jump to a directory, or reveal a file using fzf" },
 
 	# Linemode
 	{ on = [ "m", "s" ], run = "linemode size",        desc = "Set linemode to size" },
