minor hyprland and hyprlock changes

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general {
 
 background {
     monitor = 
-    path = screenshot
+    path = ~/.cache/wallpaper
     color = rgba(15161eff)
 
     blur_passes = 2
