--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -5,16 +5,16 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
-windowrule = workspace 7 silent,^(discord)$
-windowrule = workspace 6 silent,^(FreeTube)$
+windowrule = workspace 7 silent,^(com\.discordapp\.Discord)$
+windowrule = workspace 6 silent,^(freetube)$
 windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
 windowrule = workspace 10,^(cafe.avery.Delfin)$
 windowrulev2 = float,class:(floating)
-windowrulev2 = float,title:(imv)
-#windowrule = opacity 0.9,^(kitty)$
-windowrulev2 = float, title:(1Password)
-windowrulev2 = size 70% 70%, title:(1Password)
-windowrulev2 = center, title:(1Password)
+# windowrulev2 = float,title:(imv)
+# windowrule = opacity 0.9,^(kitty)$
+# windowrulev2 = float, title:(1Password)
+# windowrulev2 = size 70% 70%, title:(1Password)
+# windowrulev2 = center, title:(1Password)
 windowrulev2 = float, title:(calibre)
 windowrulev2 = size 70% 70%, title:(calibre)
 windowrulev2 = center, title:(calibre)
