--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -17,7 +17,7 @@ initial_window_height 800
 tab_bar_style powerline
 tab_powerline_style slanted
 
-window_padding_width 4
+# window_padding_width 4
 
 # BEGIN_KITTY_THEME
 include tokyo-night.conf
