--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 # env = HYPRCURSOR_THEME,qogir_hl
 # env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
-env = XCURSOR_THEME,Qogir
+env = XCURSOR_THEME,Adwaita
 env = QT_QPA_PLATFORM,wayland
 
 env = MOZ_ENABLE_WAYLAND,1
