gap and windowrule changes for hyprland

--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -15,6 +15,6 @@ windowrulev2 = float,class:(floating)
 # windowrulev2 = float, title:(1Password)
 # windowrulev2 = size 70% 70%, title:(1Password)
 # windowrulev2 = center, title:(1Password)
-windowrulev2 = float, title:(calibre)
-windowrulev2 = size 70% 70%, title:(calibre)
-windowrulev2 = center, title:(calibre)
+# windowrulev2 = float, title:(calibre)
+# windowrulev2 = size 70% 70%, title:(calibre)
+# windowrulev2 = center, title:(calibre)
