hyprland config changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,highres@59.9,auto,auto
-monitor = ,highres@49,auto,auto
+monitor = ,preferred,auto,auto
 
 env = GDK_BACKEND,wayland
 env = SDL_VIDEODRIVER,wayland
@@ -18,4 +18,5 @@ env = QT_QPA_PLATFORM,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = EDITOR,nvim
 
+env = HYPRSHOT_DIR,~/Pictures/Screenshots/
 source = ~/.config/hypr/hyprland/*
