--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -1,20 +1,25 @@
 $mainMod = SUPER
 
+$terminal = kitty
+$filemanager = nautilus
+$launcher = fuzzel
+$browser = brave
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 #bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
-bind = CONTROL, SPACE, exec, fuzzel --filter-desktop
-bind = $mainMod, R, exec, fuzzel
+bind = CONTROL, SPACE, exec, $launcher --filter-desktop
+bind = $mainMod, R, exec, $launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
 bind = $mainMod, GRAVE, togglespecialworkspace, magic
 
-bind = $mainMod, Return, exec, kitty
-bind = $mainMod ALT, F, exec, nautilus
-bind = $mainMod ALT, B, exec, brave
-bind = $mainMod ALT, N, exec, brave --incognito
+bind = $mainMod, Return, exec, $terminal
+bind = $mainMod ALT, F, exec, $nautilus
+bind = $mainMod ALT, B, exec, $browser
+bind = $mainMod ALT, N, exec, $browser --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
 bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
 bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
@@ -31,9 +36,9 @@ bind = $mainMod ALT, BACKSPACE, exec, powermenu
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
 bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
 
-bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
-bind = SUPER, print, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/$(date '+%Y%m%d-%H%M%S')-satty.png | wl-copy -t image/png
-bind = SHIFT, print, exec, grim ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S').png | wl-copy -t image/png
+bind = , print, exec, hyprshot -m output
+bind = SUPER, print, exec, hyprshot -m region
+bind = SHIFT, print, exec, hyprshot -m window
 
 # OBS
 bind = CONTROL SHIFT, R, pass, ^(com\.obsproject\.Studio)$
