--- a/hypr/.config/hypr/hyprland/exec.conf
+++ b/hypr/.config/hypr/hyprland/exec.conf
@@ -1,6 +1,7 @@
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = hyprpaper
 exec-once = waybar
+exec-once = swaync
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
