fix hyprshot path environment variable

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -18,5 +18,5 @@ env = QT_QPA_PLATFORM,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = EDITOR,nvim
 
-env = HYPRSHOT_DIR,~/Pictures/Screenshots/
+env = HYPRSHOT_DIR,$HOME/Pictures/Screenshots/
 source = ~/.config/hypr/hyprland/*
