--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -51,12 +51,12 @@ decoration {
 
     blur {
         enabled = true
-        size = 9
+        size = 10
         passes = 3
         ignore_opacity = true
       }
 
-    drop_shadow = true
+    drop_shadow = false
     # inactive_opacity = 0.8
     shadow_range = 5
     shadow_render_power = 2
