--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 wayland_titlebar_color background
 
-font_family      JetBrainsMono NF
+font_family      CaskaydiaCove NF
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
