--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -42,6 +42,13 @@ general {
     #no_cursor_warps = true
 
     layout = dwindle
+    #SmartGaps
+    workspace = w[tv1], gapsout:0, gapsin:0
+    workspace = f[1], gapsout:0, gapsin:0
+    windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+    windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+    windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+    windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 }
 
 decoration {
@@ -56,11 +63,7 @@ decoration {
         ignore_opacity = true
       }
 
-    drop_shadow = false
     # inactive_opacity = 0.8
-    shadow_range = 5
-    shadow_render_power = 2
-    col.shadow = $shadow
 }
 
 animations {
@@ -81,14 +84,12 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     # pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
-    no_gaps_when_only = 1
     force_split = 2
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     # new_is_master = false
-    no_gaps_when_only = 1
 }
 
 gestures {
