switch browser in hyprland config

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -19,7 +19,7 @@ bind = $mainMod, GRAVE, togglespecialworkspace, magic
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod ALT, F, exec, $nautilus
 bind = $mainMod ALT, B, exec, $browser
-bind = $mainMod ALT, N, exec, $browser --incognito
+bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
 bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
 bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
