--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-wayland_titlebar_color background
+# wayland_titlebar_color background
 
-font_family      JetBrainsMono NF
+font_family      CaskaydiaCove NF
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
