fix kitty titlebar

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-# wayland_titlebar_color background
+wayland_titlebar_color background
 
 font_family      CaskaydiaCove NF
 bold_font        auto
