--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,4 @@
 theme = tokyonight
-font-family = JetBrainsMono Nerd Font
+font-family = "JetBrainsMono Nerd Font"
 font-size = 11
+mouse-hide-while-typing = true
