fuzzel looks changes

--- a/hypr/.config/fuzzel/fuzzel.ini
+++ b/hypr/.config/fuzzel/fuzzel.ini
@@ -1,12 +1,13 @@
-dpi-aware=no
+[main]
+dpi-aware=yes
 icon-theme=Papirus-Dark
-width=30
-font=JetBrainsMono NF:weight=normal:size=14
-line-height=20
+width=25
+font=JetBrainsMono NF:weight=normal:size=11
 fields=name,generic,comment,categories,filename,keywords
 terminal=kitty
 prompt="❯ " 
 layer=overlay
+
 [colors]
 background=0a0a0aaf
 selection=cacacafa
@@ -15,7 +16,7 @@ text=cacacafa
 selection-text=0a0a0afa
 
 [border]
-radius=0
+radius=11
 
 [dmenu]
 exit-immediately-if-empty=no
