various changes to hyprland keybinds

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -1,6 +1,6 @@
 $mainMod = SUPER
 
-$terminal = ghostty
+$terminal = kitty
 $filemanager = nautilus
 $launcher = fuzzel
 $browser = brave
@@ -25,7 +25,7 @@ bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-featu
 bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
-bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
+bind = $mainMod ALT, M, exec, pprofile
 
 #bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
 
@@ -36,8 +36,8 @@ bind = $mainMod ALT, BACKSPACE, exec, powermenu
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
 bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
 
-bind = , print, exec, hyprshot -m output
-bind = SUPER, print, exec, hyprshot -m region
+bind = , print, exec, hyprshot -m region
+bind = SUPER, print, exec, hyprshot -m output
 bind = SHIFT, print, exec, hyprshot -m window
 
 # OBS
