--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -9,7 +9,7 @@ $browser = brave
 #bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
-bind = CONTROL, SPACE, exec, $launcher --filter-desktop
+bind = ALT, SPACE, exec, $launcher --filter-desktop
 bind = $mainMod, R, exec, $launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
