--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -6,10 +6,10 @@
 
 keymap = [
 
-  # Set Wallpaper 
-  # { on = [ "b", "g" ], run = "shell 'gsettings set org.gnome.desktop.background picture-uri-dark \"file://$1\"' --confirm", desc = "Set wallpaper" },
-  { on = [ "b", "g" ], run = "shell 'setbg \"$1\"' --confirm",    desc = "Set wallpaper" },
-  #{ on = [ "b", "l" ], run = "shell 'setlock $1'",  desc = "Set Lockscreen background"},
+	# Set Wallpaper 
+	{ on = [ "b", "g" ], run = "shell 'gsettings set org.gnome.desktop.background picture-uri-dark \"file://$1\"' --confirm", desc = "Set wallpaper" },
+	# { on = [ "b", "g" ], run = "shell 'setbg \"$1\"' --confirm",    desc = "Set wallpaper" },
+	# { on = [ "b", "l" ], run = "shell 'setlock $1'",  desc = "Set Lockscreen background"},
 
 	{ on = [ "<Esc>" ], run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
 	{ on = [ "q" ],     run = "quit",               desc = "Exit the process" },
