--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -17,3 +17,41 @@ ESC quit
 
 l show_text ${playlist}
 F8 ignore
+
+# image-viewing stuff
+# These are useful for both videos and images.
+
+n repeatable playlist-next force
+p repeatable playlist-prev
+# N playlist-next-playlist
+# P playlist-prev-playlist
+
+r cycle-values video-rotate 270 180 90 0 # default: add sub-pos -1
+t cycle-values video-rotate 90 180 270 0 # default: add sub-pos +1
+v cycle-values video-rotate 0 180 # default: cycle sub-visibility
+
+# Rebind mpv-gallery-view so we can use g sequences.
+g ignore
+g-y script-message-to playlist_view playlist-view-toggle
+
+# Enter a playlist index to go to.
+g-i script-message-to console type 'set playlist-pos-1 ; keypress ESC' 20
+# Go to the first playlist entry.
+g-g playlist-play-index 0
+# Go to the last playlist entry.
+G no-osd set playlist-pos-1 ${playlist-count} # default: add sub-scale +0.1
+
+# Image-only bindings
+b ignore
+# b-g run "setbg" "${full_path}"
+b-g run "setbg" ${path}
+
+# SPACE {image} repeatable playlist-next force
+]     {image} no-osd add playlist-pos 10
+[     {image} no-osd add playlist-pos -10
+
+# Toggle scaling the image to the window.
+u {image} no-osd cycle-values video-unscaled yes no; no-osd set video-zoom 0; no-osd set panscan 0
+
+# Toggle slideshow mode.
+s {image} cycle-values image-display-duration 5 inf; no-osd set video-zoom 0; no-osd set panscan 0; no-osd set video-unscaled no
