--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -9,3 +9,63 @@ stop-screensaver
 osd-duration=4000
 osd-font-size=30
 watch-later-directory=~/.local/share/mpv/
+
+#image-viewing stuff
+vo=gpu-next # faster with large images
+image-display-duration=inf # don't stop displaying images after 1 second
+reset-on-next-file=video-rotate,video-zoom,panscan,video-unscaled # reset rotation and the zoom when changing playlist position
+prefetch-playlist # load the next image before viewing it
+input-preprocess-wheel=no # pan diagonally with a touchpad
+
+# Show this after loading a new file. You can show text permanently instead by setting osd-msg1.
+osd-playing-msg=${!playlist-count==1:[${playlist-pos-1}/${playlist-count}] }${media-title} ${?width:${width}x${height}} ${?current-tracks/video/image==no:${?percent-pos==0:${duration}}${!percent-pos==0:${time-pos} / ${duration} (${percent-pos}%)}}
+osd-playing-msg-duration=7000
+
+# On most platforms you can make the background transparent and avoid black
+# bars while still having all the screen space available for zooming in:
+background=color
+background-color=0/0
+
+# Without transparency, these options may be useful:
+background-color=.2 # don't use pure black
+force-window-position # recenter the window when changing playlist position on X11
+auto-window-resize=no # preserve the window size when changing playlist entry
+
+# Set options for stand-alone images (not cover art).
+# profile-restore=copy unapplies and reapplies the options on each file change,
+# this is slow especially for toggling --d3d11-flip which reinits the VO,
+# so undo these options in the video profile instead.
+# This doesn't observe current-tracks/video/image and
+# current-tracks/video/albumart to prevent a rare race condition that would
+# apply the profile to music with cover art.
+[image]
+profile-cond=p['current-tracks/video'].image and not p['current-tracks/video'].albumart
+input-commands=enable-section image allow-hide-cursor # enable the image-only bindings in input.conf.
+osc=no
+d3d11-flip=no # enable background transparency on d3d11
+
+# Set options for videos.
+[video]
+profile-cond=p['current-tracks/video/image'] == false
+input-commands=disable-section image
+osc
+d3d11-flip # re-enable flip-model presentation for better video performance
+
+[manga]
+profile-cond=require 'mp.utils'.join_path(working_directory, path):find('manga')
+reset-on-next-file-remove=video-zoom # preserve the zoom when changing file
+reset-on-next-file-remove=panscan
+reset-on-next-file-remove=video-unscaled
+linear-downscaling=no # don't make black and white manga brighter
+
+# Loop short videos like gifs.
+[loop-short]
+profile-cond=duration < 30 and p['current-tracks/video/image'] == false
+profile-restore=copy
+loop-file
+
+# Enable the screensaver when images are kept open forever.
+[screensaver]
+profile-cond=p['current-tracks/video'].image and not p['current-tracks/video'].albumart and image_display_duration == math.huge
+profile-restore=copy
+stop-screensaver=no
