--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -17,7 +17,7 @@ bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, GRAVE, togglespecialworkspace, magic
 
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod ALT, F, exec, $nautilus
+bind = $mainMod ALT, F, exec, $filemanager
 bind = $mainMod ALT, B, exec, $browser
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
