removed unwanted config entries for mpv

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -23,11 +23,11 @@ osd-playing-msg-duration=7000
 
 # On most platforms you can make the background transparent and avoid black
 # bars while still having all the screen space available for zooming in:
-background=color
-background-color=0/0
+#background=color
+#background-color=0/0
 
 # Without transparency, these options may be useful:
-background-color=.2 # don't use pure black
+#background-color=.2 # don't use pure black
 force-window-position # recenter the window when changing playlist position on X11
 auto-window-resize=no # preserve the window size when changing playlist entry
 
