hyprland windowrules changes

--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -6,9 +6,8 @@
 
 windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
 windowrule = workspace 7 silent,^(com\.discordapp\.Discord)$
-windowrule = workspace 6 silent,^(freetube)$
-windowrule = workspace 7 silent,^(org\.telegram\.desktop)$
-windowrule = workspace 10,^(cafe.avery.Delfin)$
+windowrule = workspace +1,^(FreeTube)$
+windowrule = workspace +1,^(cafe.avery.Delfin)$
 windowrulev2 = float,class:(floating)
 # windowrulev2 = float,title:(imv)
 # windowrule = opacity 0.9,^(kitty)$
