--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -42,14 +42,14 @@ auto-window-resize=no # preserve the window size when changing playlist entry
 profile-cond=p['current-tracks/video'].image and not p['current-tracks/video'].albumart
 input-commands=enable-section image allow-hide-cursor # enable the image-only bindings in input.conf.
 osc=no
-d3d11-flip=no # enable background transparency on d3d11
+# d3d11-flip=no # enable background transparency on d3d11
 
 # Set options for videos.
 [video]
 profile-cond=p['current-tracks/video/image'] == false
 input-commands=disable-section image
 osc
-d3d11-flip # re-enable flip-model presentation for better video performance
+# d3d11-flip # re-enable flip-model presentation for better video performance
 
 [manga]
 profile-cond=require 'mp.utils'.join_path(working_directory, path):find('manga')
