--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,8 @@
-theme = tokyonight
+theme = tokyonight_night
 # font-family = CaskaydiaCove Nerd Font
 font-size = 11
 mouse-hide-while-typing = true
 window-padding-balance = true
 # window-decoration = false
+window-width = 900
+window-height = 600
