--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,5 @@
 theme = tokyonight_night
+# theme = catppuccin-macchiato
 # font-family = CaskaydiaCove Nerd Font
 font-size = 11
 mouse-hide-while-typing = true
