--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -100,8 +100,8 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Switch with modMod+PgUp and PgDn
-bind = $mainMod, page_down, workspace, e+1
-bind = $mainMod, page_up, workspace, e-1
+bind = $mainMod, page_down, workspace, +1
+bind = $mainMod, page_up, workspace, -1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
