--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -37,7 +37,7 @@ input-field {
     inner_color = rgb(a7a7a7)
     rounding = -1
 
-    position = 0, -200
+    position = 0, -300
     halign = center
     valign = center
 }
@@ -53,3 +53,16 @@ label {
   halign = center
   valign = center
 }
+
+label {
+    monitor =
+    text = cmd[update:1000] ~/.local/bin/lockbatt
+    text_align = center
+    color = rgb(a7a7a7)
+    font_size = 48
+    font_family = JetBrainsMono NF
+
+    position = 0, -130
+    halign = center
+    valign = center
+  }
