--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -47,15 +47,34 @@ SYSTEM_UTILS=(
 
 # Desktop environment
 DESKTOP=(
-  gnome
-  gnome-meta
-  gnome-tweaks
-  gnome-disk-utility
-  gnome-firmware
-  gnome-themes-extra
-  gnome-shell-extensions
-  gnome-shell-extensions-caffeine
-  gnome-shell-extensions-appindicator
+  ## GNOME
+  # gnome
+  # gnome-meta
+  # gnome-tweaks
+  # gnome-disk-utility
+  # gnome-firmware
+  # gnome-themes-extra
+  # gnome-shell-extensions
+  # gnome-shell-extensions-caffeine
+  # gnome-shell-extensions-appindicator
+  ## Hyprland
+  blueman
+  bluez-utils
+  brightnessctl
+  fuzzel
+  hyprland
+  hyprlock
+  hyprpaper
+  hyprpolkitagent
+  hyprshot
+  network-manager-applet
+  nwg-look
+  playerctl
+  swaync
+  waybar
+  wdisplays
+  xdg-desktop-portal-gtk
+  xdg-desktop-portal-hyprland
 )
 
 # Fonts
@@ -67,7 +86,7 @@ FONTS=(
 
 # Services to enable
 SERVICES=(
-  gdm.service
+  # gdm.service
   NetworkManager.service
   syncthing@morehush.service
 )
