fixed hyprland window rules for update

--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -1,17 +1,17 @@
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# Example windowrule 
+# windowrule = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrule = workspace 7 silent,^(com\.discordapp\.Discord)$
-windowrule = workspace +1,^(FreeTube)$
-windowrulev2 = float,class:(floating)
-# windowrulev2 = float,title:(imv)
+windowrule = workspace 7 silent,class:^(com\.discordapp\.Discord)$
+windowrule = workspace +1,class:^(FreeTube)$
+windowrule = float,class:(floating)
+# windowrule = float,title:(imv)
 # windowrule = opacity 0.9,^(kitty)$
-# windowrulev2 = float, title:(1Password)
-# windowrulev2 = size 70% 70%, title:(1Password)
-# windowrulev2 = center, title:(1Password)
-# windowrulev2 = float, title:(calibre)
-# windowrulev2 = size 70% 70%, title:(calibre)
-# windowrulev2 = center, title:(calibre)
+# windowrule = float, title:(1Password)
+# windowrule = size 70% 70%, title:(1Password)
+# windowrule = center, title:(1Password)
+# windowrule = float, title:(calibre)
+# windowrule = size 70% 70%, title:(calibre)
+# windowrule = center, title:(calibre)
