uncommented hyprland in packages.conf

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -45,18 +45,18 @@ SYSTEM_UTILS=(
   zsh
 )
 
-# Desktop environment
+# Desktop environments
 DESKTOP=(
   ## GNOME
-  # gnome
-  # gnome-meta
-  # gnome-tweaks
-  # gnome-disk-utility
-  # gnome-firmware
-  # gnome-themes-extra
-  # gnome-shell-extensions
-  # gnome-shell-extensions-caffeine
-  # gnome-shell-extensions-appindicator
+  gnome
+  gnome-meta
+  gnome-tweaks
+  gnome-disk-utility
+  gnome-firmware
+  gnome-themes-extra
+  gnome-shell-extensions
+  gnome-shell-extensions-caffeine
+  gnome-shell-extensions-appindicator
   ## Hyprland
   blueman
   bluez-utils
@@ -86,7 +86,7 @@ FONTS=(
 
 # Services to enable
 SERVICES=(
-  # gdm.service
+  gdm.service
   NetworkManager.service
   syncthing@morehush.service
 )
