--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -26,6 +26,7 @@ bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
 bind = $mainMod ALT, M, exec, pprofile
+bind = $mainMod ALT, code:51, exec, 1password
 
 #bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
 
