--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -4,9 +4,12 @@
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrule = workspace 7 silent,class:^(com\.discordapp\.Discord)$
-windowrule = workspace +1,class:^(FreeTube)$
-windowrule = float,class:(floating)
+windowrule = float, title:(1Password)
+windowrule = size 70% 70%, title:(1Password)
+windowrule = center, title:(1Password)
+windowrule = workspace 7 silent, class:^(com\.discordapp\.Discord)$
+windowrule = workspace +1, class:^(FreeTube)$
+windowrule = float, class:(floating)
 # windowrule = float,title:(imv)
 # windowrule = opacity 0.9,^(kitty)$
 # windowrule = float, title:(1Password)
