commented out hyprland. 1password app is way wonky with it.

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -58,23 +58,23 @@ DESKTOP=(
   gnome-shell-extensions-caffeine
   gnome-shell-extensions-appindicator
   ## Hyprland
-  blueman
-  bluez-utils
-  brightnessctl
-  fuzzel
-  hyprland
-  hyprlock
-  hyprpaper
-  hyprpolkitagent
-  hyprshot
-  network-manager-applet
-  nwg-look
-  playerctl
-  swaync
-  waybar
-  wdisplays
-  xdg-desktop-portal-gtk
-  xdg-desktop-portal-hyprland
+  # blueman
+  # bluez-utils
+  # brightnessctl
+  # fuzzel
+  # hyprland
+  # hyprlock
+  # hyprpaper
+  # hyprpolkitagent
+  # hyprshot
+  # network-manager-applet
+  # nwg-look
+  # playerctl
+  # swaync
+  # waybar
+  # wdisplays
+  # xdg-desktop-portal-gtk
+  # xdg-desktop-portal-hyprland
 )
 
 # Fonts
