added packages to packages.conf

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -16,11 +16,13 @@ SYSTEM_UTILS=(
   ffmpegthumbnailer
   fladder-bin
   flatpak
+  fwupd
   fzf
   ghostty
   htop
   kitty
-  lf
+  locate
+  mediainfo
   moreutils
   mpv
   neovim
@@ -34,6 +36,7 @@ SYSTEM_UTILS=(
   qt6-wayland
   rclone
   ripgrep
+  rsync
   sd
   stow
   syncthing
