changed default window layout for kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -19,6 +19,8 @@ tab_powerline_style slanted
 
 # window_padding_width 4
 
+enabled_layouts tall
+
 # BEGIN_KITTY_THEME
 include tokyo-night.conf
 # END_KITTY_THEME
