--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -5,3 +5,6 @@ font-size = 11
 mouse-hide-while-typing = true
 window-padding-balance = true
 # window-decoration = false
+
+keybind = ctrl+shift+[=goto_split:left
+keybind = ctrl+shift+]=goto_split:right
