replaced pydf with dysk

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -8,6 +8,7 @@ SYSTEM_UTILS=(
   chromium
   curl
   dust
+  dysk
   expac
   eza
   fastfetch
@@ -31,7 +32,6 @@ SYSTEM_UTILS=(
   zip
   perl-image-exiftool
   poppler
-  pydf
   qt5-wayland
   qt6-wayland
   rclone
