--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -22,31 +22,31 @@ image {
     size = 280 # lesser side if not 1:1 ratio
     rounding = -1 # negative values mean circle
     border_size = 2
-    border_color = rgb(0a0a0a)
+    border_color = rgba(0000004d)
 
-    position = 0, 300
+    position = 0, -60
     halign = center
-    valign = center
+    valign = top
 }
 
 input-field {
     monitor = 
     size = 600, 80
-    outline_thickness = 2
-    outer_color = rgb(151515)
-    inner_color = rgb(a7a7a7)
+    outline_thickness = 0
+    outer_color = rgba(15151500)
+    inner_color = rgba(4a4a4a4d)
     rounding = -1
 
-    position = 0, -300
+    position = 0, 50
     halign = center
-    valign = center
+    valign = bottom
 }
 
 label {
   monitor =
-  text = 󰅐 $TIME
-  color = rgb(afafaf)
-  font_size = 80
+  text = $TIME
+  color = rgba(0000004d)
+  font_size = 800
   font_family = JetBrainsMono NF
 
   position = 0, 0
@@ -58,11 +58,11 @@ label {
     monitor =
     text = cmd[update:1000] ~/.local/bin/lockbatt
     text_align = center
-    color = rgb(a7a7a7)
+    color = rgba(0000004d)
     font_size = 48
     font_family = JetBrainsMono NF
 
-    position = 0, -130
+    position = 0, -10
     halign = center
-    valign = center
+    valign = top
   }
