more hyprland tweaks

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,5 +1,7 @@
 general {
     disable_loading_bar = false
+    ignore_empty_input = true
+    fail_timeout = 1000
 }
 
 background {
@@ -16,37 +18,41 @@ background {
     vibrancy_darkness = 1.0
 }
 
-image {
-    monitor =
-    path = ~/Pictures/profilepics/tk_hirsute300.png
-    size = 280 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
-    border_size = 2
-    border_color = rgba(0000004d)
-
-    position = 0, -60
-    halign = center
-    valign = top
-}
+# image {
+#     monitor =
+#     path = ~/Pictures/profilepics/tk_hirsute300.png
+#     size = 280 # lesser side if not 1:1 ratio
+#     rounding = -1 # negative values mean circle
+#     border_size = 2
+#     border_color = rgba(0000004d)
+#
+#     position = 0, -100
+#     halign = center
+#     valign = top
+# }
 
 input-field {
     monitor = 
-    size = 600, 80
+    size = 1200, 100
     outline_thickness = 0
-    outer_color = rgba(15151500)
-    inner_color = rgba(4a4a4a4d)
+    outer_color = rgba(00000000)
+    inner_color = rgba(00,00,00,00)
     rounding = -1
 
-    position = 0, 50
+    position = 0, -80
     halign = center
-    valign = bottom
+    valign = top
+    
+    dots_size = 36
+    dots_text_format = *
+    font_color = rgba(00000080)
 }
 
 label {
   monitor =
   text = $TIME
-  color = rgba(0000004d)
-  font_size = 800
+  color = rgba(00000080)
+  font_size = 900
   font_family = JetBrainsMono NF
 
   position = 0, 0
@@ -58,8 +64,8 @@ label {
     monitor =
     text = cmd[update:1000] ~/.local/bin/lockbatt
     text_align = center
-    color = rgba(0000004d)
-    font_size = 48
+    color = rgba(00000080)
+    font_size = 40
     font_family = JetBrainsMono NF
 
     position = 0, -10
