hyprland and hyprlock config tweaks

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -17,8 +17,10 @@ bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, GRAVE, togglespecialworkspace, magic
 
 bind = $mainMod, Return, exec, $terminal
+bind = $mainMod ALT, Return, exec, kitten quick-access-terminal
 bind = $mainMod ALT, F, exec, $filemanager
 bind = $mainMod ALT, B, exec, $browser
+bind = $mainMod ALT, Y, exec, $terminal -e yazi
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
 bind = $mainMod ALT, T, exec, freetube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
