hyprland keybind changes

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -33,12 +33,9 @@ bind = $mainMod ALT, code:51, exec, 1password
 
 #bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
 
-bind = CONTROL ALT, DELETE, exec, hyprlock
+bind = $mainMod ALT, BACKSPACE, exec, hyprlock
 # bind = SUPER, DELETE, exec, hyprlock & systemctl suspend
-bind = $mainMod ALT, BACKSPACE, exec, powermenu
-
-bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
-bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
+bind = $mainMod ALT, P, exec, powermenu
 
 bind = , print, exec, hyprshot -m region
 bind = SUPER, print, exec, hyprshot -m output
