crucible: added some fonts and wezterm

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -38,6 +38,7 @@ SYSTEM_UTILS=(
   ripgrep
   rsync
   sd
+  starship
   stow
   syncthing
   tmux
@@ -46,6 +47,7 @@ SYSTEM_UTILS=(
   yt-dlp-drop-in
   zoxide
   zsh
+  wezterm-git
 )
 
 # Desktop environments
@@ -84,6 +86,8 @@ FONTS=(
   noto-fonts
   noto-fonts-emoji
   ttf-jetbrains-mono-nerd
+  ttf-nerd-fonts-symbols-mono
+  ttf-roboto
 )
 
 # Services to enable
