Don’t even try to refactor it.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,5 @@
 [user]
 	email = t@morehush.com
 	name = morehush
+[alias]
+	yolo = !git commit -m \"$(curl -s https://whatthecommit.com/index.txt)\"
