crucible:added packages

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -7,6 +7,7 @@ SYSTEM_UTILS=(
   btop
   chromium
   curl
+  dog
   dust
   dysk
   expac
@@ -21,6 +22,7 @@ SYSTEM_UTILS=(
   fzf
   ghostty
   htop
+  ipcalc
   kitty
   locate
   mediainfo
@@ -43,6 +45,7 @@ SYSTEM_UTILS=(
   sd
   stow
   syncthing
+  termshark
   yazi
   yt-dlp
   yt-dlp-drop-in
