crucible:added and removed some packages and such

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -26,6 +26,7 @@ SYSTEM_UTILS=(
   htop
   ipcalc
   kitty
+  lazygit
   locate
   mediainfo
   moreutils
@@ -51,7 +52,7 @@ SYSTEM_UTILS=(
   yt-dlp
   yt-dlp-drop-in
   zoxide
-  wezterm-git
+#  wezterm-git
 )
 
 # Desktop environments
@@ -67,22 +68,22 @@ DESKTOP=(
   gnome-shell-extensions-caffeine
   gnome-shell-extensions-appindicator
   ## Hyprland
-  blueman
-  bluez-utils
-  brightnessctl
-  fuzzel
-  hyprland
-  hyprlock
-  hyprpaper
-  hyprpolkitagent
-  hyprshot
-  network-manager-applet
-  nwg-look
-  playerctl
-  swaync
-  waybar
-  wdisplays
-  xdg-desktop-portal-hyprland
+#  blueman
+#  bluez-utils
+#  brightnessctl
+#  fuzzel
+#  hyprland
+#  hyprlock
+#  hyprpaper
+#  hyprpolkitagent
+#  hyprshot
+#  network-manager-applet
+#  nwg-look
+#  playerctl
+#  swaync
+#  waybar
+#  wdisplays
+#  xdg-desktop-portal-hyprland
 )
 
 # Fonts
