crucible:commented out some services

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -98,7 +98,7 @@ FONTS=(
 
 # Services to enable
 SERVICES=(
-  gdm.service
-  NetworkManager.service
+  # gdm.service
+  # NetworkManager.service
   syncthing@morehush.service
 )
