crucible:edit packages.conf

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -46,6 +46,7 @@ SYSTEM_UTILS=(
   ripgrep
   rsync
   sd
+  sshfs
   stow
   syncthing
   termshark
@@ -53,7 +54,11 @@ SYSTEM_UTILS=(
   yt-dlp
   yt-dlp-drop-in
   zoxide
-#  wezterm-git
+  calibre
+  cmatrix
+  system-config-printer
+  cups
+  tailscale
 )
 
 # Desktop environments
@@ -66,8 +71,6 @@ DESKTOP=(
   gnome-firmware
   gnome-themes-extra
   gnome-shell-extensions
-  gnome-shell-extension-caffeine
-  gnome-shell-extension-appindicator
   ## Hyprland
 #  blueman
 #  bluez-utils
