hyprland:changed some keybinds

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -32,9 +32,9 @@ bind = $mainMod ALT, code:51, exec, 1password
 
 #bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
 
-bind = $mainMod ALT, BACKSPACE, exec, hyprlock
+bind = $mainMod ALT, BACKSPACE, exec, powermenu
 # bind = SUPER, DELETE, exec, hyprlock & systemctl suspend
-bind = $mainMod ALT, P, exec, powermenu
+bind = $mainMod ALT, DELETE, exec, hyprlock
 
 bind = , print, exec, hyprshot -m region
 bind = SUPER, print, exec, hyprshot -m output
