hyprland:keybinds for webapps

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -4,6 +4,7 @@ $terminal = ghostty
 $filemanager = nautilus
 $launcher = fuzzel
 $browser = brave
+$webapp = $browser --app
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 #bind = $mainMod SHIFT, Q, exit
@@ -22,13 +23,18 @@ bind = $mainMod ALT, F, exec, $filemanager
 bind = $mainMod ALT, B, exec, $browser
 bind = $mainMod ALT, Y, exec, $terminal -e yazi
 bind = $mainMod ALT, N, exec, brave --incognito
-bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
+# bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
 bind = $mainMod ALT, T, exec, flatpak run io.freetubeapp.FreeTube
 bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
 bind = $mainMod ALT, M, exec, pprofile
 bind = $mainMod ALT, code:51, exec, 1password
+
+# webapps
+bind = $mainMod ALT, S, exec, $webapp="https://open.spotify.com"
+bind = $mainMod ALT, D, exec, $webapp="https://discord.com/channels/@me"
+bind = $mainMod ALT, U, exec, $webapp="https://youtube.com/feed/subscriptions"
 
 #bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
 
