crucible:removed a package

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -1,6 +1,7 @@
 # System utilities
 SYSTEM_UTILS=(
   1password
+  7zip
   aria2
   bat
   brave-bin
@@ -50,7 +51,6 @@ SYSTEM_UTILS=(
   sshfs
   stow
   syncthing
-  termshark
   yazi
   yt-dlp
   yt-dlp-drop-in
